[gd_scene load_steps=12 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://abstract/State.gd" type="Script" id=2]
[ext_resource path="res://concrete/PlayerStateMachine.gd" type="Script" id=3]
[ext_resource path="res://concrete/Actions/Walk.gd" type="Script" id=4]
[ext_resource path="res://concrete/Idle.gd" type="Script" id=5]
[ext_resource path="res://concrete/Actions/GravityPull.gd" type="Script" id=6]
[ext_resource path="res://concrete/Actions/Jump.gd" type="Script" id=7]
[ext_resource path="res://concrete/Player.gd" type="Script" id=8]
[ext_resource path="res://concrete/Actions/Dash.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.943, 31.762 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 1002, 30 )

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 490.057, 455.762 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -0.0285003, 0.119003 )
scale = Vector2( 0.999109, 0.996281 )
texture = ExtResource( 1 )

[node name="PlayerStateMachine" type="Node" parent="Player"]
script = ExtResource( 3 )
_constant_state = NodePath("ConstantState")
_initial_state = NodePath("OnGround")
body_path = NodePath("..")

[node name="ConstantState" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource( 2 )

[node name="GravityPull" type="Node" parent="Player/PlayerStateMachine/ConstantState"]
script = ExtResource( 6 )
max_gravity_pull = 500

[node name="OnGround" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="Player/PlayerStateMachine/OnGround"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="Player/PlayerStateMachine/OnGround"]
script = ExtResource( 7 )

[node name="InAir" type="Node" parent="Player/PlayerStateMachine"]
script = ExtResource( 2 )

[node name="Walk2" type="Node" parent="Player/PlayerStateMachine/InAir"]
script = ExtResource( 4 )
speed = 50

[node name="Action" type="Node" parent="Player/PlayerStateMachine/InAir"]
script = ExtResource( 9 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 489.536, 534.05 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ground"]
position = Vector2( -9.53601, -505.05 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2( -489.536, -132.05 )
rotation = -1.83259
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2( 458.464, -39.0499 )
rotation = -0.785397
shape = SubResource( 2 )
